--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,10 @@
         />
         <link rel="shortcut icon" href="/resources/images/favicon.ico" />
         <link rel="icon" href="/resources/images/logo.svg" />
+        <link rel="dns-prefetch" href="//cdn.decibelinsight.net">
+        <link rel="dns-prefetch" href="//collection.decibelinsight.net">
     </head>
+    <body>
     <main class="wrapper">
         <a
             href="https://github.com/trailheadapps/lwc-recipes-oss"
@@ -142,4 +145,15 @@
 
         <div id="main"></div>
     </main>
+
+    <!-- Decibel - www.salesforce.com -->
+    <script type="text/javascript">
+        (function (d, e, c, i, b, el, it) {
+            d._da_ = d._da_ || []; _da_.oldErr = d.onerror; _da_.err = [];
+            d.onerror = function () { _da_.err.push(arguments); _da_.oldErr && _da_.oldErr.apply(d, Array.prototype.slice.call(arguments)); };
+            d.DecibelInsight = b; d[b] = d[b] || function () { (d[b].q = d[b].q || []).push(arguments); };
+            el = e.createElement(c), it = e.getElementsByTagName(c)[0]; el.async = 1; el.src = i; it.parentNode.insertBefore(el, it);
+        })(window, document, 'script', 'https://cdn.decibelinsight.net/i/13970/458846/di.js', 'decibelInsight');
+    </script>
+    </body>
 </html>
