--- a/src/index.html
+++ b/src/index.html
@@ -118,7 +118,7 @@
                     </svg>
                 </div>
 
-                <h1 class="title">Lightning Web Components Recipes</h1>
+                <h1 class="title">DPAE - Lightning Web Components Recipes</h1>
             </a>
             <input class="menu-btn" type="checkbox" id="menu-btn" />
             <label class="menu-icon" for="menu-btn"
