--- a/src/modules/ui/app/app.html
+++ b/src/modules/ui/app/app.html
@@ -15,8 +15,8 @@
                     <recipe-hello-expressions></recipe-hello-expressions>
                     <recipe-hello-expressions-track></recipe-hello-expressions-track>
                     <recipe-hello-conditional-rendering></recipe-hello-conditional-rendering>
-                    <recipe-hello-for-each></recipe-hello-for-each
-                    ><recipe-hello-iterator></recipe-hello-iterator>
+                    <recipe-hello-for-each></recipe-hello-for-each>
+                    <recipe-hello-iterator></recipe-hello-iterator>
                 </template>
                 <template if:true={navigationItems.composition.visible}>
                     <recipe-composition-basics></recipe-composition-basics>
@@ -38,6 +38,7 @@
                     <recipe-misc-shared-java-script></recipe-misc-shared-java-script>
                     <recipe-misc-rest-api-call></recipe-misc-rest-api-call>
                     <recipe-misc-dom-query></recipe-misc-dom-query>
+                    <recipe-hello-standard-form></recipe-hello-standard-form>
                     <recipe-misc-multiple-templates></recipe-misc-multiple-templates>
                 </template>
                 <template if:true={navigationItems.party.visible}>
