feat(input): add names to input

--- a/src/modules/recipe/apiProperty/apiProperty.html
+++ b/src/modules/recipe/apiProperty/apiProperty.html
@@ -1,14 +1,15 @@
 <template>
     <ui-card title="ApiProperty">
         <div>
-            <ui-input
+            <recipe-input
                 label="Percentage"
                 type="number"
+                name="percentage"
                 min="0"
                 max="100"
                 value={percentage}
                 onchange={handlePercentageChange}
-            ></ui-input>
+            ></recipe-input>
             <recipe-chart-bar percentage={percentage}></recipe-chart-bar>
         </div>
 
