--- a/src/modules/recipe/helloExpressions/helloExpressions.html
+++ b/src/modules/recipe/helloExpressions/helloExpressions.html
@@ -2,16 +2,16 @@
     <ui-card title="HelloExpressions">
         <div>
             <form id="hello-expressions">
-                <ui-input
+                <recipe-input
                     name="firstName"
                     label="First Name"
                     onchange={handleChange}
-                ></ui-input>
-                <ui-input
+                ></recipe-input>
+                <recipe-input
                     name="lastName"
                     label="Last Name"
                     onchange={handleChange}
-                ></ui-input>
+                ></recipe-input>
             </form>
             <p class="margin-top-medium">
                 Uppercased Full Name: {uppercasedFullName}
