--- a/src/modules/recipe/todoList/todoList.html
+++ b/src/modules/recipe/todoList/todoList.html
@@ -1,10 +1,11 @@
 <template>
     <div>
-        <ui-input
+        <recipe-input
             label="Priority Only"
             type="checkbox"
             onchange={handleCheckboxChange}
-        ></ui-input>
+            name="priority"
+        ></recipe-input>
         <ul class="margin-top-small">
             <template for:each={filteredTodos} for:item="todo">
                 <li key={todo.id}>
